fix: main page text spacing

--- a/src/client/scss/home.scss
+++ b/src/client/scss/home.scss
@@ -8,8 +8,8 @@
   align-items: center;
 
   .game {
-    height: calc(100vh - 12rem);
-    @media (max-height: 425px) {
+    height: calc(100vh - 15rem);
+    @media (max-height: 500px) {
       height: auto;
     }
     @media (min-height: 750px) {
@@ -77,6 +77,7 @@
       cursor: pointer;
       filter: invert(50%) sepia(0%) saturate(0%) hue-rotate(188deg)
         brightness(91%) contrast(87%);
+      margin-top: 2rem;
     }
 
     &__reset:hover {
